--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>현대카드 웨더 앱</title>
 </head>
+
 <body>
   <div class="header-container">
-    <header class="header">헤더</header>
+    <header class="header">
+      <h1 class="brand">
+        <a href="#">현대카드 웨더</a>
+      </h1>
+      <nav class="navigation">
+        <h2 class="a11y-hidden">메인메뉴</h2>
+        <ul class="gnb">
+          <li>
+            <a href="#">주요서비스 소개</a>
+          </li>
+          <li>
+            <a href="#">앱설치</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </div>
   <div class="main-container">
     <main class="main">메인 컨텐츠</main>
@@ -17,4 +34,5 @@
     <footer class="footer">푸터</footer>
   </div>
 </body>
+
 </html>
