메인 섹션 컨텐츠 마크업

--- a/index.html
+++ b/index.html
@@ -28,7 +28,41 @@
     </header>
   </div>
   <div class="main-container">
-    <main class="main">메인 컨텐츠</main>
+    <main class="section">
+      <section class="service-introduction">
+        <div class="hyundaicard-weather">
+          <div class="content-wrapper">
+            <h2 class="section-heading">
+              <span>매일 똑같은 날씨는 없다</span>
+              <span>현대카드 웨더</span>
+          </h2>
+          <p class="section-description">
+            <span>새로운 방법으로 날씨를 표현하는 현대카드의 날씨 정보</span>
+            <span>서비스입니다. 위트 있는 날씨 멘트와 감각적인 표현으로</span>
+            <span>현대카드만의 차별화된 날씨 정보를 제공합니다.</span>
+          </p>
+          <ul class="btn-store-list">
+            <li>
+              <figure class="btn-store">
+              <a href="#">
+                <img src="images/web/btn_down1.png" alt="download on the app store">
+              </a>
+              <figcaption>IOS 6.0 이상 지원</figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure class="btn-store">
+              <a href="#">
+                <img src="images/web/btn_down2.png" alt="get it on the google paly">
+              </a>
+              <figcaption>Android 4.0 이상 지원</figcaption>
+              </figure>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </section>
+    </main>
   </div>
   <div class="footer-container">
     <footer class="footer">푸터</footer>
