apple-touch-icon 선언 삭제

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>현대카드 웨더</title>
-  <meta name="keywords" content="현대카드 웨더" />
+  <meta name="keywords" content="현대카드 웨더,날씨,weather" />
   <meta name="description" content="현대카드 웨더 weather.hyundaicard.com" />
   <meta name="format-detection" content="telephone=no" />
   <meta property="og:url" content="http://weather.hyundaicard.com/" />
@@ -17,7 +17,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="image_src" href="http://mud-kage.kakao.co.kr/14/dn/btqb3Lxep9j/YEuqn1bxfGpBfxTjSM93K1/o.jpg" />
   <link rel="shortcut icon" type="image/x-icon" href="images/img_favicon_v1.ico" />
-  <link rel="apple-touch-icon" href="images/img_favicon_v1.ico" />
 
   <link rel="stylesheet" href="css/stylesheet.css" />
 </head>
