--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="image_src" href="http://mud-kage.kakao.co.kr/14/dn/btqb3Lxep9j/YEuqn1bxfGpBfxTjSM93K1/o.jpg">
   <link rel="shortcut icon" type="image/x-icon" href="images/img_favicon_v1.ico" />
   <link rel="apple-touch-icon" href="images/img_favicon_v1.ico" />
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
